Fixed compilation error